# bitrix-to-postgres

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  architecture.md  datalens-ql-chart.sql  docker-compose copy.yml  docker-compose-airflow.yml  docker-compose-click-house.yml  docker-compose-no-airflow.yml  docker-compose.yml  pyproject.toml  testclichaus.py
new_version/backend/: Dockerfile  pyproject.toml  test_stage_history.py
new_version/backend/alembic/: env.py
new_version/backend/alembic/versions/: 001_create_system_tables.py  002_create_ai_charts_table.py  004_create_dashboards_tables.py  005_add_refresh_interval.py  009_create_chart_prompts_table.py  010_add_records_fetched_to_sync_logs.py  011_create_reports_tables.py  012_create_published_reports_tables.py  013_add_llm_prompt_to_report_runs.py  016_add_post_filter_to_mappings.py  017_add_dashboard_heading_items.py  018_add_tab_label_to_dashboards.py  019_add_hide_title_to_dashboard_charts.py  020_add_title_font_size_override.py  021_add_bitrix_id_int.py
new_version/backend/app/: config.py  main.py
new_version/backend/app/api/v1/: __init__.py
new_version/backend/app/api/v1/endpoints/: charts.py  dashboards.py  departments.py  plans.py  public.py  references.py  reports.py  schema_description.py  selectors.py  status.py  sync.py  webhooks.py
new_version/backend/app/api/v1/schemas/: charts.py  (+7 more)
new_version/backend/app/core/: auth.py  exceptions.py  webhooks.py
new_version/backend/app/domain/entities/: __init__.py  base.py  company.py  deal.py  department.py  lead.py  plan.py  reference.py  stage_history.py
new_version/backend/app/domain/services/: ai_service.py  chart_service.py  dashboard_service.py  date_tokens.py  department_service.py  field_mapper.py  plan_service.py  plan_template_service.py  plans_ai_service.py  reference_sync_service.py  report_service.py  selector_service.py  sync_service.py
new_version/backend/app/infrastructure/bitrix/: client.py
new_version/backend/app/infrastructure/database/: connection.py  dynamic_table.py  models.py
new_version/backend/app/infrastructure/queue/: sync_queue.py
new_version/backend/app/infrastructure/scheduler/: __init__.py  scheduler.py
new_version/backend/app/tests/: conftest.py
new_version/backend/app/tests/e2e/: test_full_sync.py
new_version/backend/app/tests/integration/: test_api.py
new_version/backend/app/tests/unit/: test_sync_service.py
(+219 files in other folders)
