[tool.poetry]
name = "bitrix-to-postgres"
version = "0.1.0"
description = ""
authors = ["Igor Gerasimov <gerasimov.igor.98@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fast-bitrix24 = "^1.8.2"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["clickhouse"], version = "^2.0.40"}
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
clickhouse-connect = "^0.8.17"
clickhouse-driver = "^0.2.9"
clickhouse-sqlalchemy = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
